# MProject-Robot-12DOF

./: build.sh  clean.sh  frames_2024-10-17_11.05.10.gv  rebuild.sh
install/: local_setup.sh  setup.sh
install/cerbere/lib/cerbere/: autorun_node  imu_test_node
install/cerbere/share/cerbere/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dgz/include/dgz/: dgz_frame.hpp
install/dgz/lib/dgz/: dgz_ctrl_node  move_ctrl_node
install/dgz/share/dgz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dgz_description/share/dgz_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dgz_keyboard/lib/dgz_keyboard/: dgz_keyboard_node
install/dgz_keyboard/share/dgz_keyboard/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dgz_viewer/share/dgz_viewer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/frame_broadcaster/lib/frame_broadcaster/: broadcaster_transform
install/frame_broadcaster/share/frame_broadcaster/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/frame_listener/lib/frame_listener/: listener_transform
install/frame_listener/share/frame_listener/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/manette/lib/manette/: manette_node
install/manette/share/manette/: package.bash  (+9 more)
log/: latest_build
src/cerbere/: CMakeLists.txt
src/cerbere/config/: config.yaml  joint_names_cerbere.yaml  ros2_control.yaml  ros_gz_bridge.yaml  rviz.yaml
src/cerbere/launch/: cerbere.launch.py
src/cerbere/meshes/: LinkCARD.STL  LinkCARG.STL  LinkCAVD.STL  LinkCAVG.STL  LinkHARD.STL  LinkHARG.STL  LinkHAVD.STL  LinkHAVG.STL  LinkMARD.STL  LinkMARG.STL  LinkMAVD.STL  LinkMAVG.STL
src/cerbere/src/: autorun_node.cpp  imu_test_node.cpp
src/cerbere/urdf/: cerbere.csv  cerbere.ros2_control.xacro  cerbere.urdf.xacro  cerbere.xacro
src/dgz/: CMakeLists.txt
src/dgz/config/: dgz_params.yaml
src/dgz/include/dgz/: dgz_frame.hpp
src/dgz/launch/: dgz.launch.py
src/dgz/src/: dgz_ctrl_node.cpp  dgz_frame.cpp  move_ctrl_node.cpp
src/dgz_description/: CMakeLists.txt  package.xml
src/dgz_description/launch/: dgz_description.launch.py
src/dgz_keyboard/: CMakeLists.txt
src/dgz_keyboard/launch/: dgz_keyboard.launch.py
src/dgz_keyboard/src/: dgz_keyboard_node.cpp
src/dgz_viewer/: CMakeLists.txt  package.xml
src/dgz_viewer/config/: config.yaml  ros2_control.yaml
src/dgz_viewer/launch/: dgz_viewer.launch.py
src/dgz_viewer/urdf/: accessories.urdf.xacro  asus_camera.urdf.xacro  champ.ros2_control.xacro  champ.urdf  champ.urdf.xacro  champ_arm.urdf  champ_velodyne.urdf  hokuyo_utm30lx.urdf.xacro  leg.urdf.xacro  properties.urdf.xacro  sensors.xacro  sensors1.xacro  xgo_rviz.xacro
src/frame_broadcaster/: CMakeLists.txt
src/frame_broadcaster/src/: broadcaster_transform.cpp
src/frame_listener/: CMakeLists.txt
src/frame_listener/log/: latest_list
src/frame_listener/src/: listener_transform.cpp
src/manette/: CMakeLists.txt  package.xml
src/manette/config/: manette_params.yaml
src/manette/launch/: manette.launch.py
src/manette/src/: manette_node.cpp
src/pkg_tf2_cpp/: CMakeLists.txt  package.xml
src/pkg_tf2_cpp/launch/: _launch.py
src/pkg_tf2_cpp/src/: frame_tf2_broadcaster.cpp
src/pkg_tf2_listener/: package.xml  setup.cfg  setup.py
src/pkg_tf2_listener/launch/: _launch.py
src/pkg_tf2_listener/pkg_tf2_listener/: listener.py
src/pkg_tf2_py/: package.xml  setup.cfg  setup.py
src/pkg_tf2_py/launch/: _launch.py
src/pkg_tf2_py/pkg_tf2_py/: frame_tf2_broadcaster.py
src/quadriped_urdf/: CMakeLists.txt  package.xml
src/quadriped_urdf/launch/: display.launch  gazebo.launch
src/quadriped_urdf/meshes/: BLB.STL  BLC.STL  BRA.STL  BRB.STL  FLB.STL  FRA.STL  FRC.STL  base_link.STL
src/quadriped_urdf/urdf/: quadriped_urdf.csv  quadriped_urdf.urdf
src/quadro_move_ctrl/: CMakeLists.txt  package.xml
src/quadro_move_ctrl/src/: quadro_move_ctrl_node.cpp
src/quadrobot/: CMakeLists.txt  package.xml
src/quadrobot/config/: joint_names_quadrobot.yaml
src/quadrobot/launch/: display.launch.py
src/quadrobot/meshes/: BLB.STL  BLC.STL  BRA.STL  CAMERA.STL  FLA.STL  FLB.STL  FRB.STL  FRC.STL  LIDAR.STL  base_link.STL
src/quadrobot/models/: empty.world.sdf
src/quadrobot/urdf/: quadrobot.csv  quadrobot.urdf
src/quadrobot_viewer/: CMakeLists.txt  package.xml
src/quadrobot_viewer/config/: config.yaml  quadrobot_viewer_params.yaml  ros2_control.yaml
src/quadrobot_viewer/launch/: quadrobot_viewer.launch.py
src/quadrobot_viewer/meshes/: BRB.STL  BRC.STL  FLC.STL
src/quadrobot_viewer/models/: empty.world.sdf
src/quadrobot_viewer/urdf/: quadrobot.ros2_control.xacro  quadrobot.urdf  quadrobot.urdf.xacro  quadrobot.xacro  quadrobot_ros2_control.urdf.xacro
src/quadruped_urdf/: CMakeLists.txt
src/quadruped_urdf/launch/: display.launch.py
src/quadruped_urdf/meshes/: BLA.STL  BRC.STL  FLC.STL  FRB.STL  base_link.STL
src/quadruped_urdf/rviz/: urdf.rviz
src/quadruped_urdf/urdf/: quadruped_urdf.csv  quadruped_urdf.urdf
src/ros_gz_bridge_test/: CMakeLists.txt
src/ros_gz_bridge_test/config/: ros_gz_bridge.yaml
src/ros_gz_bridge_test/launch/: ros_gz_bridge_test.launch.py
src/ros_gz_bridge_test/src/: ros_gz_bridge_test_node.cpp
src/serial/: CMakeLists.txt
src/serial/include/serial/: serial.hpp
src/serial/src/: serial.cpp  testlib_node.cpp
src/space_interfaces/: CMakeLists.txt  package.xml
src/tuto/: a.urdf
(+363 files in other folders)
